third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/mutate_full_invalid.exp

Diagnostics:
error: cannot write to reference in local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:23:9
   │
22 │         let f = id(x);
   │                 ----- previous call result
23 │         *x = 0;
   │         ^^^^^^ written here

error: cannot write to reference in local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:28:9
   │
27 │         let f = id_mut(x);
   │                 --------- previous mutable call result
28 │         *x = 0;
   │         ^^^^^^ written here
